--- a/e4.html
+++ b/e4.html
@@ -35,11 +35,8 @@
 
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
-                        <a href="#home" class="nav-item nav-link active">Accueil</a>
-                        <a href="#about" class="nav-item nav-link">A propos</a>
-                        <a href="#service" class="nav-item nav-link">Compétences</a>
-                        <a href="#experience" class="nav-item nav-link">Experiences</a>
-                        <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
+                        <a href="index.html" class="nav-item nav-link">Accueil</a>
+                        <a href="#portfolio" class="nav-item nav-link active">Synthèse E4</a>
                     </div>
                 </div>
             </div>
@@ -214,7 +211,7 @@
                                 <tr>
                                   <th scope="row">Mise en place de la solution OBarbeuc</th>
                                   <td>12/11/2002</td>
-                                  <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/circle.svg" /></a></td>
+                                  <td class="align_center"><a href="file\Gestion du patrimoine Obarbeuc.pdf" target="_blank" class="logo_e4"><img src="./img/circle.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
                                   <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/star.svg" /></a></td>
@@ -236,7 +233,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">Refonte d'un site web avec Wordpress</th>
-                                <td>12/11/2002</td>
+                                <td>Du 09/05/22 au 24/06/2022</td>
                                 <td></td>
                                 <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                 <td></td>
@@ -249,17 +246,17 @@
                               </tr>
                               <tr>
                                 <th scope="row">Déploiement d'un site web sur OVH</th>
-                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td>Du 03/01/23 au 10/02/23</td>
                                 <td></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/square.svg" /></a></td>
-                                <td class="align_center"><a data-toggle="modal" data-target="#services" class="logo_e4"><img src="./img/heart.svg" /></a></td>
+                                <td class="align_center"></td>
+                                <td class="align_center"></td>
                                 <td></td>
                                 <td class="align_center"><a href="file\Déploiement du site JLM.pdf" target="_blank" class="logo_e4"><img src="./img/triangle.svg" /></a></td>
                                 <td></td>
                               </tr>
                               <tr>
                                 <th scope="row">Refonte d'un site web avec ReactJS et Express (pour presence ajoutez avis google, google adsense et le seo dans le rapport de stage)</th>
-                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td>Du 03/01/23 au 10/02/23</td>
                                 <td></td>
                                 <td></td>
                                 <td class="align_center"><a href="file\Présence du site JLM.pdf" target="_blank" class="logo_e4"><img src="./img/heart.svg" /></a></td>
@@ -269,7 +266,7 @@
                               </tr>
                               <tr>
                                 <th scope="row">Création d'une API REST</th>
-                                <td>Du 03/01/23 au 02/02/23</td>
+                                <td>Du 03/01/23 au 10/02/23</td>
                                 <td></td>
                                 <td class="align_center"><a href="file\Incidents et Demandes Api JLM.pdf" target="_blank" class="logo_e4"><img src="./img/square.svg" /></a></td>
                                 <td class="align_center"></td>
